--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <h2>Чем мы занимаемся</h2>
     
             <ul>
-                <li><img src="./image/photo_1.jpg" alt="написание кода" width="370px"></li>
-                <li><img src="./image/photo_2.jpg" alt="создание интерфейса" width="370px"></li>
-                <li><img src="./image/photo_3.jpg" alt="дизайн" width="370px"></li>
+                <li><img src="./image/photo_1.jpg" alt="написание кода" width="370"></li>
+                <li><img src="./image/photo_2.jpg" alt="создание интерфейса" width="370"></li>
+                <li><img src="./image/photo_3.jpg" alt="дизайн" width="370"></li>
             </ul>
     
         </section>
